--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Dasmoto's Arts & Crafts</h1>
-      <div class="item>
+      <div class="item">
         <h2 id="brush">Brushes</h2>
         
         <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/hacksaw.jpeg">
