--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Dasmoto's Arts & Crafts</title>
-    <link href="https://mmcmahon.github.io/style.css" type=text/css" rel="stylesheet">
+    <link href="https://mmcmahon89.github.io/style.css" type=text/css" rel="stylesheet">
   </head>
   <body>
     <h1>Dasmoto's Arts & Crafts</h1>
