--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Dasmoto's Arts & Crafts</title>
-    <link href=".dasmoto-s-Arts/style.css" type=text/css" rel="stylesheet">
+    <link href="style.css" type=text/css" rel="stylesheet">
   </head>
   <body>
     <h1>Dasmoto's Arts & Crafts</h1>
